# geomancer

./: .gitattributes  Cargo.toml  README.md  TODO.md
src/: lib.rs  prelude.rs
src/algorithm/: mod.rs
src/algorithm/convex_hull/: convex_hull_impl.rs  mod.rs
src/algorithm/farthest_points/: farthest_points_impl.rs  mod.rs
src/algorithm/self_intersections/: mod.rs
src/algorithms/: mod.rs
src/algorithms/convex_hull/: convex_hull_exact_impl.rs  convex_hull_impl.rs  mod.rs
src/algorithms2d/: convex_hull.rs  mod.rs
src/algorithms2d/convex_hull/: convex_hull_exact_impl.rs  convex_hull_impl.rs  mod.rs
src/common/: error.rs  mod.rs  orientation.rs  test_utils.rs
src/kernel/: array_kernels.rs  bevy.rs  generic.rs  geo.rs  mod.rs  nalgebra.rs  standard_kernel.rs  traits.rs  tuple_kernels.rs
src/kernels/: array_kernels.rs  bevy.rs  generic.rs  geo.rs  mod.rs  nalgebra.rs  tuple_kernels.rs
src/math/: mod.rs  orientation.rs
src/primitives/: convex_polygon.rs  mod.rs  polygon.rs  simple_polygon.rs
src/traits/: kernel.rs  kernel2d.rs  mod.rs  number.rs  point2d.rs
