[package]
name = "geomancer"
version = "0.0.1"
edition = "2021"
authors = ["AndrewB330"]
readme = "README.md"
description = "Performance-oriented Rust library providing a suite of geometry primitives and algorithms."
documentation = "https://docs.rs/geomancer"
repository = "https://github.com/AndrewB330/geomancer"
homepage = "https://github.com/AndrewB330/geomancer"
license = "MIT OR Apache-2.0"
keywords = ["geometry", "algorithms"]
categories = ["algorithms", "graphics"]

[dependencies]
num-traits = "0.2"
# Optional dependencies
bevy_math = { package = "bevy_math", version = "0.15", optional = true, default-features = false }
nalgebra = { package = "nalgebra", version = "0.33", optional = true, default-features = false }
geo = { package = "geo", version = "0.29", optional = true, default-features = false }

[features]
default = ["geo", "nalgebra", "bevy_math", "tuple_kernels", "array_kernels"]
tuple_kernels = []
array_kernels = []

[dev-dependencies]
rstest = "0.25"
rand = "0.9"
